Resolves tdf#158084 - Use system colors in start center

StartCenterThumbnailsHighlightColor and StartCenterThumbnailsHighlightTextColor
removed in favor of StyleSettings.GetHighlightColor and .GetActiveColor

Change-Id: I7005b17f6c48525c791f23ea99b7b68e7a67531b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159286
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>